--- a/thank_you.html
+++ b/thank_you.html
@@ -32,7 +32,7 @@
         }
 
         nav {
-            background-color: var(--primary-color);
+            background: linear-gradient(135deg, #489b4c, #28a745, #00A5CF);
             padding: 1rem 2rem;
             box-shadow: var(--shadow);
             position: sticky;
@@ -213,8 +213,8 @@
             <a href="Home.html" class="logo">إعادة التدوير</a>
             <div class="nav-links">
                 <a href="Home.html">الصفحة الرئيسية</a>
-                <a href="about.html">عن المبادرة</a>
-                <a href="contact.html">اتصل بنا</a>
+                <a href="Store.html">المتجر </a>
+                <a href="contactus.html">اتصل بنا</a>
             </div>
         </div>
     </nav>
